objects/LLC_BI__Authorized_Account__c.object
<CustomObject>
    <description>The authorized business object is used to capture information about the account that is assigned as an authorized business for an entity.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>The system automatically populates this required lookup field to capture the account the system uses as an authorized business on behalf of the entity.</description>
        <inlineHelpText>The system-populated field associates the authorized business to the account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Authorized Accounts</relationshipLabel>
        <relationshipName>Authorized_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to capture the authorized business for which the current authorized business is acting.</description>
        <inlineHelpText>The system-populated field associates the authorized business to another authorized business.</inlineHelpText>
        <label>Authorized Account</label>
        <referenceTo>LLC_BI__Authorized_Account__c</referenceTo>
        <relationshipLabel>Authorized Accounts</relationshipLabel>
        <relationshipName>Authorized_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capacity__c</fullName>
        <description>The user populates this required picklist to specify what capacity the business can act on behalf of the relationship.</description>
        <label>Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>General Partner</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Entity__c</fullName>
        <description>The system automatically populates this required lookup field to associate an authorized business to a specific entity involvement.</description>
        <inlineHelpText>The system-populated field associates the authorized business to a specific entity involvement.</inlineHelpText>
        <label>Entity Involvement</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Authorized Accounts</relationshipLabel>
        <relationshipName>Authorized_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Structure_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field during the deposit account opening workflow to associate an authorized business to a specific ownership structure role.</description>
        <inlineHelpText>This system-populated field associates the authorized business to a specific ownership structure role.</inlineHelpText>
        <label>Ownership Structure Role</label>
        <referenceTo>LLC_BI__Ownership_Structure_Role__c</referenceTo>
        <relationshipLabel>Authorized Accounts</relationshipLabel>
        <relationshipName>Authorized_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Signing_Authority__c</fullName>
        <description>The user populates this required picklist to indicate the signing authority the business has for the loan.</description>
        <label>Signing Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Not Authorized</fullName>
                    <default>true</default>
                    <label>Not Authorized</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Authorized Account</label>
    <nameField>
        <label>Authorized Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorized Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>